--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,11 @@
             android:exported="false">
 
         </activity>
+        <activity
+            android:name=".LayoutsScripts.forum_message"
+            android:exported="false">
+
+        </activity>
     </application>
 
 </manifest>
